--- a/rep01.html
+++ b/rep01.html
@@ -31,7 +31,7 @@
       <img src="art.png" alt="アート" width="50%" height="50%">
       <div>
         1.内容<br>
-        スクラッチを使って線を書くプログラムを～～～自分の文章で続きを書く。<br>
+        スクラッチを使って線を書くプログラムを作った。変数を作成し、値を少しずつ変えてsin関数に入れることで進む長さを調節し、四つ葉のマークを作った。また、色の変え幅を調節して一周で色がちょうどになるようにした。<br>
         2.感想<br>
         感想を自分で書く。<br>
       </div>
