--- a/rep01.html
+++ b/rep01.html
@@ -33,7 +33,7 @@
         1.内容<br>
         スクラッチを使って線を書くプログラムを作った。変数を作成し、値を少しずつ変えてsin関数に入れることで進む長さを調節し、四つ葉のマークを作った。また、色の変え幅を調節して一周で色がちょうどになるようにした。<br>
         2.感想<br>
-        感想を自分で書く。<br>
+        線の長さを途中で変えてみたかったので試しにsin関数を使うと、想像以上にきれいな図形になった。また、変数の代わりに向きを用いればさらにプログラムを短くできそうに感じた。<br>
       </div>
     </div>
 
