--- a/rep01.html
+++ b/rep01.html
@@ -42,9 +42,9 @@
       <img src="game.png" alt="ゲーム" width="50%" height="50%">
       <div>
         1.内容<br>
-        ないようないよう<br>
+        上から落ちてくるボールをゲットすると10点追加されるゲームを作った。もしブロックで左右矢印キーを認識することによって操作の遅延をなくし、得点をスプライトで表示することで見やすくした。<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        イベントの代わりにもしブロックを使うことは簡単だったが、得点をスプライトで表示するのはかなり大変だった。得点の桁数は時間の都合上3桁までしか表示できるプログラムを作れなかった。<br>        
       </div>
     </div>
 
