--- a/rep01.html
+++ b/rep01.html
@@ -54,9 +54,9 @@
         <!-- 自分のホームページのURLに置き替える↓ -->
         <a href="https://rr22120y.github.io/website/">私のホームページ</a><br>
         1.内容<br>
-        ないようないよう<br>
+        githubを使ってホームページを作った。しかし、タイトルや本文はまだ編集できていない。<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        githubのアカウントを作る際、先生が話をしている間に先のことをしていてしまっていたため、アカウント名に学籍番号を入れてしまった。今後は、先生の話をよく聞きながら実習をしようと思った。<br>        
       </div>      
     </div>
     
