--- a/rep02.html
+++ b/rep02.html
@@ -31,9 +31,9 @@
       <a href="https://rr22120y.github.io/website/rep01">１週目のレポート</a><br>
       <div>
         1.内容<br>
-        ないようないよう<br>
+        画像を貼ったり文字を書いたりすることにより、HTMLでレポートを書いた。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        画像を貼ろうとしたがなかなか貼れず、少し苦戦した。HTMLでレポートを書くのはWordで書くより難しいと思っていたが、案外変わらなかった。<br>
       </div>
     </div>
 
