--- a/rep02.html
+++ b/rep02.html
@@ -33,7 +33,7 @@
         1.内容<br>
         画像を貼ったり文字を書いたりすることにより、HTMLでレポートを書いた。<br>
         2.感想<br>
-        画像を貼ろうとしたがなかなか貼れず、少し苦戦した。HTMLでレポートを書くのはWordで書くより難しいと思っていたが、案外変わらなかった。<br>
+        画像を貼ろうとしたがなかなか貼れず、少し苦戦した。また、HTMLでレポートを書くのはWordで書くより難しいと思っていたが、案外変わらなかった。<br>
       </div>
     </div>
 
@@ -42,9 +42,9 @@
       <img src="Teachable Machine.png" alt="ML" width="50%" height="50%">
       <div>
         1.内容<br>
-        ないようないよう<br>
+        Teachable Machineというサイトでじゃんけんの機械学習をした。<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        機械学習はとても取り組むハードルが高いと思っていたが、気軽にできたので驚いた。また、グーやパーを出してもチョキと判定されることが多く、調整が大変だった。<br>        
       </div>
     </div>
     
