--- a/rep02.html
+++ b/rep02.html
@@ -52,9 +52,9 @@
       <h3>2-3 VR（バーチャルリアリティー：Virtual Reality）会議室の体験</h3>
       <div>
         1.内容<br>
-        ないようないよう<br>
+        VRの会議室で共用のホワイトボードに絵や文字を書いた。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        絵を描くのも大変だったが、文字を書くほうが個人的に難しかった。また、よく手を周りの物にぶつけてしまい申し訳なかった。<br>
       </div>
     </div>
     
