--- a/rep02.html
+++ b/rep02.html
@@ -22,7 +22,7 @@
 <body>
   <div class=header>
     <h1>２週目のレポート ： 公大高専１年実習I-1</h1>
-    <div>1B班N番 ニックネーム</div>
+    <div>1B班28番 yyf999999999</div>
   </div>
   <div class=2week>
     <h2>第2週目</h2>
