--- a/rep03.html
+++ b/rep03.html
@@ -31,9 +31,9 @@
       <a href="https://rr22120y.github.io/website/vr.html">伝言板</a><br>                                   
       <div>
         1.内容<br>
-        ないようないよう<br>
+        A-Frameというサイトのプログラムを編集し、vr空間を作った。ベンチと人間を作った。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        人間を作るとき、パーツ同士をつなげる部分が曲面のことが多かったため、距離をどのくらい変えるか調整するのが大変だった。<br>
       </div>
     </div>
     <div>
@@ -42,9 +42,9 @@
       <a href="https://rr22120y.github.io/website/denngonn.html">伝言板</a><br>                                   
       <div>
         1.内容<br>
-        ないようないよう<br>
+        javascriptとhtmlを使って伝言板を作った。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        javascriptを最近勉強し始めていたので、簡単に理解できた。また、オブジェクト指向を今までほとんど理解できていなかったので、今回ある程度理解できたのがうれしかった。<br>
       </div>
     </div>
 
@@ -52,9 +52,9 @@
       <h3>3-3 JavaScriptプログラムの３次元空間の体験</h3>
       <div>
         1.内容<br>
-        ないようないよう<br>
+        javascriptで作られた3次元空間を体験した。ボールをたくさん出したり、ボールをオブジェクトで打ち返したりした。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        ボールを打ち返すのが難しく、ほとんど成功しなかった。また、ボールを狭いところに打って反射させまくるのが楽しかった。<br>
       </div>
     </div>
   
