--- a/rep03.html
+++ b/rep03.html
@@ -38,7 +38,7 @@
     </div>
     <div>
       <h3>3-2 JavaScript体験：伝言プログラムを作る</h3>
-      <img src="dennonn.png" alt="JavaScript" width="50%" height="50%"><br>
+      <img src="denngonn.png" alt="JavaScript" width="50%" height="50%"><br>
       <a href="https://rr22120y.github.io/website/denngonn.html">伝言板</a><br>                                   
       <div>
         1.内容<br>
